Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/OppSalesProcLayout__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>ComponentApiName__c</fullName>
        <description>Component API Name</description>
        <label>ComponentApiName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentOrder__c</fullName>
        <label>ComponentOrder</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComponentType__c</fullName>
        <label>ComponentType</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <description>Opportunity Stage</description>
        <label>OpportunityStage</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>Opportunity Record Type</description>
        <label>RecordType</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the field a mandatory field</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SectionHeader__c</fullName>
        <label>SectionHeader</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>OpportunitySalesProcessLayout</label>
</CustomObject>